src/Weather.css
.Weather {
  border: 0.5px solid black;
  padding: 16px;
  margin: 15px auto;
  max-width: 600px;
  border-radius: 4px;
}

footer {
  text-align: center;
}
.Weather h1 {
  color: black;
  font-size: 24px;
  font-weight: 100;
  line-height: 29px;
  margin: 20px 0 0 0;
}

.Weather ul {
  margin: 0;
  padding: 0;
}
.Weather li {
  color: black;
  font-size: 16px;
  font-weight: 100;
  line-height: 19px;
  list-style: none;
}

.Weather canvas {
  display: inline-block;
  margin-left: 0px;
}

.Weather .temperature {
  font-weight: bold;
  color: rgb(33, 33, 33);
  font-size: 60px;
  line-height: 64px;
  margin-left: 5px;
  font-weight: 400;
  margin-left: 10px;
}

.Weather .unit {
  font-size: 16px;
  position: relative;
  top: -32px;
}

a {
  text-decoration: none;
}

